# cif-v1

./: .gitignore  .gitmodules  .travis.yml  ChangeLog  LICENSE  Makefile.am  README  README.md  autogen.sh  cif-feed.proto  cif.proto  configure.ac  feed.proto  index.html  msg.proto  params.json  rebuild.sh
cif-router/: ChangeLog  Makefile.am
cif-router/lib/CIF/: Router.pm
cif-router/lib/CIF/Router/: HTTP.pm
cif-router/lib/CIF/Router/HTTP/: Json.pm
cif-smrt/: Makefile.am  configure.ac
cif-smrt/lib/CIF/: Smrt.pm
cif-smrt/lib/CIF/Smrt/: ParseCifFeed.pm  ParseCsv.pm  ParseJson.pm  ParseRss.pm  ParseXml.pm
cif-smrt/lib/CIF/Smrt/Plugin/: Postprocessor.pm
cif-smrt/lib/CIF/Smrt/Plugin/Decode/: Gtar.pm  Zip.pm
cif-smrt/lib/CIF/Smrt/Plugin/Postprocessor/: Fqdn.pm  Ip.pm  Malware.pm  Url.pm
cif-smrt/lib/CIF/Smrt/Plugin/Postprocessor/Fqdn/: Nameserver.pm  Resolve.pm
cif-smrt/lib/CIF/Smrt/Plugin/Postprocessor/Ip/: Bgp.pm  PrefixWhitelist.pm  Spamhaus.pm
cif-smrt/lib/CIF/Smrt/Plugin/Postprocessor/Malware/: TCMalwareRegistry.pm
cif-smrt/lib/CIF/Smrt/Plugin/Postprocessor/Url/: Fqdn.pm
cif-smrt/lib/CIF/Smrt/Plugin/Preprocessor/: Address.pm  Description.pm  Email.pm  Portlist.pm  Uri.pm
cif-smrt/lib/CIF/Smrt/Plugin/Pull/: Cif.pm  File.pm
cif-smrt/rules/: Makefile.am
cif-smrt/rules/etc/: 00_whitelist.cfg  bambenekconsulting.cfg  feodotracker.cfg  malc0de.cfg  malwaredomainlist.cfg  spamhaus.cfg  zeustracker.cfg
cif-smrt/sbin/: test-dependencies
cif-test-framework/: Makefile.am  README  configure.ac
cif-test-framework/lib/CIF/: TESTFRAMEWORK.pm
cif-test-framework/lib/CIF/TESTFRAMEWORK/Plugin/: 10_Query.pm
defs/: feed.proto
etc/: 00_alexa_whitelist.cfg  00_mirc_whitelist.cfg  00_whitelist.cfg  alienvault.cfg  aper.cfg  autoshun.cfg  blocklistde.cfg  ciarmy.cfg  cif_smrt.conf  cleanmx.cfg  custom.cfg.example  drg.cfg  malc0de.cfg  malwaredomains.cfg  misc.cfg  mpatrol.cfg  nixspam.cfg  pastebin.cfg  pastebin.cfg.example  phishtank.cfg  shadowserver.cfg  spyeyetracker.cfg  torstatus.cfg  trustedsec.cfg  vabl.cfg  virbl.cfg  zeustracker.cfg
etc/upgrade/lib/CIF/: Legacy.pm
etc/upgrade/lib/CIF/Legacy/: Bgp.pm  Group.pm  Ipv4.pm
etc/upgrade/schema/: 00_remove.sql  01_alter_archive.sql  02_alter_apikeys.sql
experimental/: install_rhel6.sh  legacy_example.pl
lib/: CIF.pm
lib/CIF/: APIKey.pm  Archive.pm  Client.pm  DBI.pm  Feed.pm  Message.pm  Msg.pm  Profile.pm  Router.pm  Smrt.pm  TESTFRAMEWORK.pm  Utils.pm
lib/CIF/Archive/: Plugin.pm
lib/CIF/Archive/Plugin/: Asn.pm  Countrycode.pm  Domain.pm  Email.pm  Feed.pm  Hash.pm  Infrastructure.pm  Malware.pm  Rir.pm  Search.pm  Url.pm
lib/CIF/Archive/Plugin/Domain/: Botnet.pm  Fastflux.pm  Malware.pm  Phishing.pm  (+5 more)
lib/CIF/Client/: HTTP.pm  Query.pm  REST.pm
lib/CIF/Client/Query/: Asn.pm  Cc.pm  Feed.pm  Ipv4.pm  Rir.pm  Url.pm
lib/CIF/Client/Transport/: HTTP.pm
lib/CIF/Feed/: Plugin.pm
lib/CIF/Feed/Plugin/: Address.pm  Domain.pm  Email.pm  Infrastructure.pm  Malware.pm  Search.pm  Url.pm
lib/CIF/Msg/: Feed.pm
lib/CIF/Router/: APIKey.pm  APIKeyGroups.pm  HTTP.pm  REST.pm
lib/CIF/Router/HTTP/: Json.pm
lib/CIF/Smrt/: ParseCIF.pm  ParseCifFeed.pm  ParseCsv.pm  ParseDelim.pm  ParseJson.pm  ParseJsonIodef.pm  ParsePbIodef.pm  ParseRss.pm  ParseTxt.pm  ParseXml.pm
lib/CIF/Smrt/Plugin/: Postprocessor.pm
lib/CIF/TESTFRAMEWORK/: Plugin.pm
lib/CIF/TESTFRAMEWORK/Plugin/: 00_Submit.pm  01_Submit_SimpleHTTP.pm  10_Query.pm  11_Query_SimpleHTTP.pm
libcif/: ChangeLog  Makefile.am  README  configure.ac
libcif-dbi/: ChangeLog  README  configure.ac  rebuild.sh
libcif-dbi/etc/upgrade/lib/CIF/Legacy/: Domain.pm  Email.pm  Malware.pm  Service.pm  ShareWith.pm  Url.pm
libcif-dbi/etc/upgrade/schema/: 00_remove.sql
libcif-dbi/lib/CIF/: APIKeyGroups.pm  APIKeyRestrictions.pm  Archive.pm  DBI.pm  Feed.pm
libcif-dbi/lib/CIF/Archive/: Plugin.pm
libcif-dbi/lib/CIF/Archive/Plugin/: Asn.pm  Cc.pm  Domain.pm  Email.pm  Infrastructure.pm  Search.pm  Url.pm
libcif-dbi/lib/CIF/Archive/Plugin/Domain/: Fastflux.pm  Malware.pm  Passive.pm  Phishing.pm  Spamvertising.pm  Suspicious.pm  Whitelist.pm
libcif-dbi/lib/CIF/Archive/Plugin/Email/: Phishing.pm  Whitelist.pm
libcif-dbi/lib/CIF/Archive/Plugin/Hash/: Sha1.pm  Uuid.pm
libcif-dbi/lib/CIF/Archive/Plugin/Infrastructure/: Botnet.pm  Fastflux.pm  Phishing.pm  Scan.pm  Suspicious.pm
libcif-dbi/lib/CIF/Archive/Plugin/Malware/: Md5.pm  Sha1.pm
libcif-dbi/lib/CIF/Archive/Plugin/Url/: Botnet.pm  Malware.pm  Phishing.pm  Spamvertising.pm  Whitelist.pm
libcif-dbi/lib/CIF/Feed/Plugin/: Domain.pm  Email.pm  Infrastructure.pm  Search.pm
libcif-dbi/sbin/: migrate-data.pl  test-dependencies
libcif-dbi/schemas/: pg_purge.sql
libcif-dbi/schemas/Pg/: 00_archive.sql  apikeys.sql  domains.sql  email.sql  search.sql
libcif-dbi/schemas/Pg/index/: hash.sql
libcif/lib/: CIF.pm
libcif/lib/CIF/: Client.pm  Msg.pm
libcif/lib/CIF/Client/Query/: Ipv4.pm  Rir.pm
libcif/lib/CIF/Client/Transport/: HTTP.pm
libcif/lib/CIF/Msg/: Feed.pm
libcif/protocol/: README.md
libcif/protocol/src/: feed.proto
libcif/sbin/: test-dependencies
libcif/tests/: CIF.t  Makefile.am
perl/: Makefile  Makefile.PL  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  rebuild.sh
perl/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
perl/lib/CIF/: Msg.pm  _Msg.pm
perl/lib/CIF/Msg/: Feed.pm
perl/sbin/: test-dependencies
protocol/: Makefile.am
rules/: configure.ac
rules/etc/: 00_mirc_whitelist.cfg
sbin/: apikeys_migrate.pl  gen_protocol_bindings.pl  generate_perl_bindings.pl  migrate-data.pl  test-dependencies  upgrade-database.pl  upgrade-database.pl.2
schemas/: pg_purge.sql
schemas/Pg/: 00_archive.sql  apikeys.sql  asn.sql  countrycode.sql  domain.sql  domains.sql  email.sql  feed.sql  hash.sql  infrastructure.sql  malware.sql  router.sql  search.sql  url.sql
schemas/Pg/index/: domains.sql  email.sql  hash.sql  infrastructure.sql  malware.sql  search.sql  url.sql
src/: feed.proto  msg.proto
tests/: Makefile.am
(+57 files in other folders)
